# allowthem

./: .dir-locals.el  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  bacon.toml  flake.nix  justfile  package-lock.json  package.json  sqlx.toml
.beads/: interactions.jsonl  metadata.json
binaries/: Cargo.toml  LICENSE  admin_applications.rs  admin_audit.rs  admin_sessions.rs  branding.rs  config.rs  consent.rs  error.rs  login.rs  logout.rs  main.rs  mfa.rs  mock_oauth.rs  password_reset.rs  register.rs  settings.rs  state.rs  templates.rs  test_oauth_routes.rs
binaries/saas/: cli.rs  config.rs  main.rs
binaries/standalone/: admin_applications.rs  admin_audit.rs  admin_sessions.rs  admin_template_render_tests.rs  all_standalone_templates_guard_tests.rs  config.rs  main.rs  preview.rs  state.rs  templates.rs  test_oauth_routes.rs
binaries/standalone/templates/: preview.html
binaries/standalone/templates/admin/: application_detail.html  application_edit.html  application_new.html  applications_list.html  audit_log.html  sessions_list.html  user_detail.html  users_list.html
binaries/templates/: base.html  consent.html  login.html  mfa_challenge.html  register.html  reset_password.html  settings.html
binaries/templates/admin/: application_detail.html  application_edit.html  application_new.html  applications_list.html  audit_log.html  sessions_list.html  user_detail.html
crates/client/: Cargo.toml  client.rs  jwks.rs
crates/core/: Cargo.toml  access_tokens.rs  api_tokens.rs  applications.rs  audit.rs  auth_client.rs  authorization.rs  core.rs  csrf.rs  db.rs  db_tests.rs  email.rs  email_verification.rs  error.rs  events.rs  handle.rs  invitations.rs  jwt.rs  mfa_encrypt.rs  oauth.rs  oauth_github.rs  oauth_google.rs  password.rs  password_reset.rs  permissions.rs  roles.rs  sessions.rs  signing_keys.rs  token_cleanup.rs  token_issuance.rs  totp.rs  types.rs  users.rs
crates/core/migrations/: 20260415000000_block1_core_tables.sql  20260415000001_password_reset_tokens.sql  20260415000002_audit_log.sql  20260415000003_api_tokens.sql  20260415000004_oauth_accounts.sql  20260415000005_mfa_tables.sql  20260415000006_mfa_challenges.sql  20260415000006_oauth_state_linking_user_id.sql  20260415000008_invitations.sql  20260416000000_oidc_application_tables.sql  20260416000001_signing_keys.sql  20260416000002_authorization_codes_nonce.sql  20260416000003_refresh_tokens_auth_code_id.sql  20260417000000_api_tokens_metadata.sql  20260418000000_email_verification_tokens.sql  20260418214447_add_custom_data.sql  20260420000000_client_type.sql  20260420000001_nullable_client_secret_hash.sql  20260421000000_branding_wavefunk_fields.sql
crates/saas/: Cargo.toml  api_keys.rs  cache.rs  control_db.rs  error.rs  router.rs  saas.rs  tenants.rs
crates/saas/manage/: applications.rs  logs.rs  mod.rs  permissions.rs  roles.rs  sessions.rs  usage.rs  users.rs
crates/saas/migrations/: 20260420000000_control_plane.sql  20260420000001_tenant_plans_seed.sql
crates/server/: Cargo.toml  all_routes.rs  all_server_templates_guard_tests.rs  auth_template_guard_tests.rs  authorize_routes.rs  bearer.rs  branding.rs  browser_error.rs  browser_templates.rs  consent_routes.rs  cors.rs  csrf.rs  custom_fields.rs  error.rs  events.rs  extractors.rs  hx.rs  login_routes.rs  logout_routes.rs  mfa_page_routes.rs  mfa_routes.rs  middleware.rs  nav.rs  oauth_bearer.rs  oauth_routes.rs  partials_tests.rs  password_reset_page_routes.rs  password_reset_routes.rs  rate_limit.rs  register_routes.rs  server.rs  settings_routes.rs  shell_context.rs  static_routes.rs  token_route.rs  userinfo_route.rs  well_known_routes.rs
crates/server/assets/static/css/: 01-tokens.css  03-layout.css  colors_and_type.css  fonts.css  kit.css  layouts.css
crates/server/assets/static/fonts/: iosevka-aile.css
crates/server/assets/static/js/: mode-toggle.js  shader-ascii.js
crates/server/templates/: base.html  consent.html  forgot_password.html  login.html  mfa_challenge.html  mfa_recovery.html  mfa_setup.html  register.html  reset_password.html  settings.html
crates/server/templates/_partials/: _app_shell.html  _auth_macros.html  _auth_main_consent.html  _auth_main_forgot_password.html  _auth_main_login.html  _auth_main_mfa_challenge.html  _auth_main_mfa_recovery.html  _auth_main_mfa_setup.html  _auth_main_register.html  _auth_main_reset_password.html  _auth_oob_head.html  _auth_shell.html  _create_account_link.html  _flash.html  _form_field.html  _mode_toggle.html  _modeline.html  _sidebar_nav.html  _sign_in_link.html  _splash.html  _status_bar.html
crates/server/templates/v2/: base.html  mfa_challenge.html  register.html
crates/server/templates/v2/_partials/: _app_shell.html  _auth_main_consent.html  _auth_main_forgot_password.html  _auth_main_mfa_challenge.html  _auth_main_mfa_recovery.html  _auth_main_mfa_setup.html  _auth_oob_head.html  _splash.html
crates/server/tests/: integration_default_branding.rs
crates/teams/: Cargo.toml  db.rs  handle.rs  invitations.rs  org_members.rs  orgs.rs  team_members.rs  team_ops.rs  teams.rs  types.rs
crates/teams/migrations/: 20260419000001_teams_tables.sql
docs/superpowers/plans/: 2026-04-19-teams-crate.md
docs/superpowers/specs/: 2026-03-19-allowthem-design.md  2026-04-19-teams-crate-design.md
tests/e2e/: .gitignore  admin-access.spec.ts  admin-audit.spec.ts  admin-sessions.spec.ts  auth-login.spec.ts  auth-logout.spec.ts  auth-oauth.spec.ts  auth-password-reset.spec.ts  auth-rate-limit.spec.ts  auth-register.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  m3-auth-visual.spec.ts  m5-accent-override.spec.ts  m6-admin-visual.spec.ts  mfa-login.spec.ts  mfa-recovery.spec.ts  mfa-setup.spec.ts  oidc-authorize.spec.ts  oidc-discovery.spec.ts  oidc-rp.ts  oidc-token.spec.ts  oidc-userinfo-refresh.spec.ts  package-lock.json  package.json  playwright.config.ts  smoke.spec.ts  tsconfig.json  z3c-auth-htmx.spec.ts
