[workspace]
members = [ "crates/*", "binaries" ]
resolver = "3"


[workspace.package]
version = "0.0.1"
authors = ["Wave Funk"]
description = "allowthem — embeddable authentication system"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wavefunk/allowthem"


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log-always"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v7", "v4", "serde"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
sqlx = { version = "0.9.0-alpha.1", features = [
    "runtime-tokio", "sqlite", "derive", "macros",
    "migrate", "uuid", "chrono", "sqlx-toml"
] }
axum = { version = "0.8.8", features = ["multipart"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["getrandom"] }
sha2 = "0.10"
hmac = { version = "0.12", features = ["std"] }
subtle = "2"
rand = "0.9"
base64ct = { version = "1", features = ["alloc"] }
jsonwebtoken = "9"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
aes-gcm = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
minijinja = { version = "2", features = ["loader"] }
dashmap = "6"
serde_html_form = "0.2"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev]
incremental = true
