[package]
name = "allowthem"
version.workspace = true
authors.workspace = true
description = "allowthem server binary"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
publish = false

[[bin]]
name = "allowthem"
path = "standalone/main.rs"

[[bin]]
name = "allowthem-saas"
path = "saas/main.rs"

[dependencies]
allowthem-core = { path = "../crates/core" }
allowthem-server = { path = "../crates/server" }
allowthem-saas = { path = "../crates/saas" }
axum.workspace = true
base64ct.workspace = true
chrono.workspace = true
clap.workspace = true
dashmap.workspace = true
eyre.workspace = true
figment.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
minijinja.workspace = true
tower-http.workspace = true
serde_html_form.workspace = true

[dev-dependencies]
tower.workspace = true
totp-rs.workspace = true
regex.workspace = true
