[package]
name = "allowthem-saas"
version.workspace = true
authors.workspace = true
description = "SaaS multi-tenancy layer for allowthem"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "./saas.rs"

[dependencies]
allowthem-core = { path = "../core", version = "0.0.5" }
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
moka.workspace = true
futures.workspace = true
dashmap.workspace = true
axum.workspace = true
tower.workspace = true
tokio.workspace = true
subtle.workspace = true
sha2.workspace = true
base64ct.workspace = true
rand.workspace = true
governor.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3.8"
