[package]
name = "allowthem-server"
version.workspace = true
authors.workspace = true
description = "HTTP server and middleware for allowthem"
edition.workspace = true

[lib]
path = "./server.rs"

[dependencies]
allowthem-core = { path = "../core" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
sqlx.workspace = true
tempfile = "3.8"
totp-rs.workspace = true
