[package]
name = "allowthem-server"
version.workspace = true
authors.workspace = true
description = "HTTP server and middleware for allowthem"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "./server.rs"

[dependencies]
allowthem-core = { path = "../core", version = "0.0.1" }
axum.workspace = true
base64ct.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
governor.workspace = true
hmac.workspace = true
minijinja.workspace = true
subtle.workspace = true

[dev-dependencies]
jsonwebtoken.workspace = true
sha2.workspace = true
sqlx.workspace = true
tempfile = "3.8"
totp-rs.workspace = true
